fix  hero -2 visible

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -8,7 +8,6 @@ html {
 
 main {
 	flex: 1 0 auto;
-	padding-top: var(--header-height);
 	background-image: url('../img/desktop.webp');
 	background-repeat: no-repeat repeat;
 	background-position: center top -600px;
